--- a/configs/vagons/inference/mobnetv3_large_baseline_512.yml
+++ b/configs/vagons/inference/mobnetv3_large_baseline_512.yml
@@ -6,7 +6,7 @@ model:
     checkpoint: /home/alex/a.nevarko/models/vagon_cls/mobilenetv3_large_100_v2_balanced/last.pth
 
 inference_data:
-    root: /home/alex/a.nevarko/data/gpt/vagons_cls/test_data/2023-03-14_06-53-09.605540/R1_debug
+    root: /home/alex/a.nevarko/data/gpt/vagons_cls/test_data/L1_debug
     batch_size: 64
     num_workers: 2
     size: 512
@@ -18,7 +18,7 @@ inference_data:
         4: 'par_cisterna',
         5: 'vagon',
     }
-save_path: /home/alex/a.nevarko/data/gpt/vagons_cls/test_data/2023-03-14_06-53-09.605540_res/R1_debug
+save_path: /home/alex/a.nevarko/data/gpt/vagons_cls/test_data/L1_debug_res
 
 
     
