--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,6 +46,7 @@ repos:
       - id: black
         args:
           - "--line-length=120"
+        exclude: ^configs/archive/.*$
   - repo: https://github.com/codespell-project/codespell.git
     rev: v2.2.6
     hooks:
