--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ dependencies = [
     "scipy>=1.4.1",
     "albumentations>=1.0.3",
     "pandas>=1.1.4",
+    "scikit-learn>=1.3.1",
     "torchsampler",
     "comet-ml",
     "timm",
