add unicom to pyproject dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ dependencies = [
     "torchsampler",
     "comet-ml",
     "timm",
+    "unicom @ git+https://github.com/deepglint/unicom.git",
     "wheel",
     "setuptools",
     "ninja",
