--- a/configs/yolo_dataset_config.yaml
+++ b/configs/yolo_dataset_config.yaml
@@ -5,6 +5,8 @@ path: /root/Projects/datasets/
 train: # train images (relative to 'path')  16551 images
     - brain-tumor/train/images/
     - brain-tumor/train/images/
+    - another_dataset/  # can also specify directory containing subdirectories with images and labels
+                        # that will be recursively searched
 
 val: # val images (relative to 'path')  4952 images
     - brain-tumor/valid/images/
