--- a/configs/yolo_dataset_config.yaml
+++ b/configs/yolo_dataset_config.yaml
@@ -1,20 +1,19 @@
 # Ultralytics YOLO 🚀, AGPL-3.0 license
 
 # Train/val/test sets as 1) dir: path/to/imgs, 2) file: path/to/imgs.txt, or 3) list: [path/to/imgs1, path/to/imgs2, ..]
-path: /root/Projects/datasets/
-train: # train images (relative to 'path')  16551 images
-    - brain-tumor/train/images/
-    - brain-tumor/train/images/
-    - another_dataset/  # can also specify directory containing subdirectories with images and labels
-                        # that will be recursively searched
+path: .
+train: # train images (relative to 'path')
+    - data1/train/images/
+    - data2/train/images/
+    - data3/  # can also specify directory containing subdirectories with images and labels
+              # that will be recursively searched
 
-val: # val images (relative to 'path')  4952 images
-    - brain-tumor/valid/images/
-    - brain-tumor/valid/images/
+val: # val images (relative to 'path')
+    - data_val/val/images/
   
-nc: 3
+nc: 2
 
 # Classes
-names:
-  0: negative
-  1: positive
+names: # should form range(1, num_classes) without skips
+  0: cat
+  1: dog
